--- a/shadows.ui
+++ b/shadows.ui
@@ -86,111 +86,75 @@
     <rect>
      <x>20</x>
      <y>80</y>
-     <width>291</width>
-     <height>31</height>
+     <width>241</width>
+     <height>51</height>
     </rect>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="detect">
-   <property name="geometry">
-    <rect>
-     <x>410</x>
-     <y>160</y>
-     <width>191</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Extract Features </string>
    </property>
   </widget>
   <widget class="QTextBrowser" name="status">
    <property name="geometry">
     <rect>
      <x>350</x>
-     <y>230</y>
+     <y>270</y>
      <width>291</width>
-     <height>31</height>
+     <height>61</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="suspicious">
+  <widget class="QPushButton" name="detect">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>300</y>
+     <x>400</x>
+     <y>210</y>
      <width>191</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>Detect Suspicious Activity</string>
+    <string>Test</string>
    </property>
   </widget>
   <widget class="QPushButton" name="browse">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>120</y>
-     <width>131</width>
-     <height>31</height>
+     <x>260</x>
+     <y>80</y>
+     <width>51</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
     <string>Select</string>
    </property>
   </widget>
-  <widget class="QProgressBar" name="progressBar1">
-   <property name="geometry">
-    <rect>
-     <x>350</x>
-     <y>90</y>
-     <width>291</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="value">
-    <number>0</number>
-   </property>
-  </widget>
   <widget class="QProgressBar" name="progressBar2">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>230</y>
+     <x>350</x>
+     <y>80</y>
      <width>291</width>
      <height>23</height>
     </rect>
    </property>
    <property name="value">
     <number>0</number>
-   </property>
-  </widget>
-  <widget class="QTextBrowser" name="feature_status">
-   <property name="geometry">
-    <rect>
-     <x>350</x>
-     <y>120</y>
-     <width>291</width>
-     <height>31</height>
-    </rect>
    </property>
   </widget>
   <widget class="QTextBrowser" name="activity_status">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>260</y>
+     <x>350</x>
+     <y>110</y>
      <width>291</width>
-     <height>31</height>
+     <height>91</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="exit">
    <property name="geometry">
     <rect>
-     <x>530</x>
-     <y>350</y>
+     <x>340</x>
+     <y>360</y>
      <width>99</width>
      <height>31</height>
     </rect>
@@ -199,24 +163,11 @@
     <string>Exit</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>350</x>
-     <y>70</y>
-     <width>151</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Feature Extraction</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>210</y>
+     <x>350</x>
+     <y>60</y>
      <width>201</width>
      <height>17</height>
     </rect>
@@ -229,7 +180,7 @@
    <property name="geometry">
     <rect>
      <x>350</x>
-     <y>210</y>
+     <y>250</y>
      <width>68</width>
      <height>17</height>
     </rect>
@@ -238,17 +189,131 @@
     <string>Status:</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="trainsvm">
    <property name="geometry">
     <rect>
-     <x>420</x>
-     <y>350</y>
+     <x>230</x>
+     <y>360</y>
      <width>101</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>Train SVM</string>
+   </property>
+  </widget>
+  <widget class="QProgressBar" name="progressBar1">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>180</y>
+     <width>291</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>0</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>160</y>
+     <width>151</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Feature Extraction</string>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="feature_status">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>210</y>
+     <width>291</width>
+     <height>91</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="extract">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>310</y>
+     <width>191</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Extract Features </string>
+   </property>
+  </widget>
+  <widget class="Line" name="line">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>140</y>
+     <width>311</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>340</y>
+     <width>641</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_3">
+   <property name="geometry">
+    <rect>
+     <x>319</x>
+     <y>60</y>
+     <width>31</width>
+     <height>281</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_4">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>40</y>
+     <width>641</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_5">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>240</y>
+     <width>311</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
    </property>
   </widget>
  </widget>
