--- a/batch.ui
+++ b/batch.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>632</width>
-    <height>414</height>
+    <width>949</width>
+    <height>467</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>949</width>
+    <height>467</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>949</width>
+    <height>467</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Batch Processing</string>
@@ -17,8 +29,8 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>40</y>
-     <width>591</width>
+     <y>100</y>
+     <width>901</width>
      <height>161</height>
     </rect>
    </property>
@@ -26,8 +38,8 @@
   <widget class="QPushButton" name="selectFolderButton">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>210</y>
+     <x>810</x>
+     <y>270</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -39,8 +51,8 @@
   <widget class="QPushButton" name="batchLog">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>370</y>
+     <x>420</x>
+     <y>420</y>
      <width>99</width>
      <height>27</height>
     </rect>
@@ -52,8 +64,8 @@
   <widget class="QPushButton" name="batchCloseButton">
    <property name="geometry">
     <rect>
-     <x>510</x>
-     <y>370</y>
+     <x>540</x>
+     <y>420</y>
      <width>99</width>
      <height>27</height>
     </rect>
@@ -65,8 +77,8 @@
   <widget class="QPushButton" name="startBatch">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>370</y>
+     <x>300</x>
+     <y>420</y>
      <width>99</width>
      <height>27</height>
     </rect>
@@ -79,8 +91,8 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>330</y>
-     <width>591</width>
+     <y>380</y>
+     <width>901</width>
      <height>23</height>
     </rect>
    </property>
@@ -101,7 +113,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>310</y>
+     <y>360</y>
      <width>81</width>
      <height>17</height>
     </rect>
@@ -114,7 +126,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>20</y>
+     <y>80</y>
      <width>81</width>
      <height>17</height>
     </rect>
@@ -127,8 +139,8 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>270</y>
-     <width>591</width>
+     <y>320</y>
+     <width>901</width>
      <height>31</height>
     </rect>
    </property>
@@ -137,7 +149,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>250</y>
+     <y>300</y>
      <width>91</width>
      <height>17</height>
     </rect>
@@ -149,14 +161,47 @@
   <widget class="QPushButton" name="clearListButton">
    <property name="geometry">
     <rect>
-     <x>380</x>
-     <y>210</y>
+     <x>690</x>
+     <y>270</y>
      <width>111</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>Clear</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>10</y>
+     <width>181</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>16</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Batch Processing</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>60</y>
+     <width>591</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Please select a folder and press 'Start' to process all video files in the folder at once.</string>
    </property>
   </widget>
  </widget>
