--- a/login.ui
+++ b/login.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>566</width>
-    <height>192</height>
+    <width>949</width>
+    <height>467</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>566</width>
-    <height>192</height>
+    <width>949</width>
+    <height>467</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>566</width>
-    <height>192</height>
+    <width>949</width>
+    <height>467</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -34,31 +34,27 @@
   <widget class="QPushButton" name="login">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>140</y>
+     <x>660</x>
+     <y>240</y>
      <width>111</width>
      <height>27</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Login</string>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
    </property>
-  </widget>
-  <widget class="QLineEdit" name="username">
-   <property name="geometry">
-    <rect>
-     <x>300</x>
-     <y>50</y>
-     <width>241</width>
-     <height>27</height>
-    </rect>
+   <property name="text">
+    <string>OK</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="password">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>100</y>
+     <x>650</x>
+     <y>200</y>
      <width>241</width>
      <height>27</height>
     </rect>
@@ -76,42 +72,35 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>80</y>
-     <width>81</width>
+     <x>650</x>
+     <y>180</y>
+     <width>231</width>
      <height>17</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Password:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>300</x>
-     <y>30</y>
-     <width>81</width>
-     <height>21</height>
-    </rect>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
    </property>
    <property name="text">
-    <string>Username:</string>
+    <string>Enter Administrator Password:</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>40</y>
-     <width>251</width>
-     <height>91</height>
+     <x>120</x>
+     <y>150</y>
+     <width>381</width>
+     <height>141</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Nimbus Mono L</family>
-     <pointsize>16</pointsize>
+     <pointsize>28</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -125,11 +114,17 @@ Detection System</string>
   <widget class="QPushButton" name="exitLogin">
    <property name="geometry">
     <rect>
-     <x>430</x>
-     <y>140</y>
+     <x>780</x>
+     <y>240</y>
      <width>101</width>
      <height>27</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
    </property>
    <property name="text">
     <string>Exit</string>
@@ -138,10 +133,10 @@ Detection System</string>
   <widget class="Line" name="line">
    <property name="geometry">
     <rect>
-     <x>253</x>
-     <y>-10</y>
+     <x>580</x>
+     <y>0</y>
      <width>20</width>
-     <height>211</height>
+     <height>471</height>
     </rect>
    </property>
    <property name="orientation">
