--- a/main.ui
+++ b/main.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>682</width>
-    <height>461</height>
+    <width>949</width>
+    <height>467</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>682</width>
-    <height>461</height>
+    <width>949</width>
+    <height>467</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>682</width>
-    <height>461</height>
+    <width>949</width>
+    <height>467</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -29,10 +29,10 @@
    <widget class="Line" name="line_5">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>190</y>
-      <width>311</width>
-      <height>16</height>
+      <x>500</x>
+      <y>200</y>
+      <width>431</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="orientation">
@@ -44,7 +44,7 @@
      <rect>
       <x>20</x>
       <y>350</y>
-      <width>641</width>
+      <width>911</width>
       <height>20</height>
      </rect>
     </property>
@@ -55,7 +55,7 @@
    <widget class="Line" name="line_3">
     <property name="geometry">
      <rect>
-      <x>329</x>
+      <x>480</x>
       <y>70</y>
       <width>31</width>
       <height>281</height>
@@ -80,13 +80,13 @@
      </font>
     </property>
     <property name="text">
-     <string>Select a video file :</string>
+     <string>Select a video file and click on  'Test'</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>520</x>
       <y>230</y>
       <width>68</width>
       <height>17</height>
@@ -100,8 +100,8 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>200</y>
-      <width>291</width>
+      <y>210</y>
+      <width>441</width>
       <height>23</height>
      </rect>
     </property>
@@ -112,20 +112,20 @@
    <widget class="QPushButton" name="trainsvm">
     <property name="geometry">
      <rect>
-      <x>390</x>
+      <x>530</x>
       <y>380</y>
-      <width>101</width>
+      <width>121</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Train SVM</string>
+     <string>Advanced Tools</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>40</x>
+      <x>180</x>
       <y>0</y>
       <width>611</width>
       <height>51</height>
@@ -150,21 +150,21 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>240</y>
+      <y>250</y>
       <width>211</width>
       <height>17</height>
      </rect>
     </property>
     <property name="text">
-     <string>Suspicious Activity Prediction</string>
+     <string>Detecting Suspicious Activity:</string>
     </property>
    </widget>
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>150</y>
-      <width>311</width>
+      <y>160</y>
+      <width>471</width>
       <height>20</height>
      </rect>
     </property>
@@ -175,8 +175,8 @@
    <widget class="QPushButton" name="extract">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>300</y>
+      <x>180</x>
+      <y>310</y>
       <width>131</width>
       <height>31</height>
      </rect>
@@ -189,8 +189,8 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>90</y>
-      <width>241</width>
+      <y>100</y>
+      <width>381</width>
       <height>51</height>
      </rect>
     </property>
@@ -199,8 +199,8 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>260</y>
-      <width>291</width>
+      <y>270</y>
+      <width>441</width>
       <height>23</height>
      </rect>
     </property>
@@ -211,9 +211,9 @@
    <widget class="QTextBrowser" name="progressbox">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>520</x>
       <y>90</y>
-      <width>291</width>
+      <width>401</width>
       <height>91</height>
      </rect>
     </property>
@@ -222,21 +222,21 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>180</y>
+      <y>190</y>
       <width>251</width>
       <height>17</height>
      </rect>
     </property>
     <property name="text">
-     <string>Preprocess (Feature Extraction)</string>
+     <string>Processing Video:</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="status">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>520</x>
       <y>250</y>
-      <width>291</width>
+      <width>401</width>
       <height>61</height>
      </rect>
     </property>
@@ -244,20 +244,20 @@
    <widget class="QPushButton" name="browse">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>90</y>
-      <width>51</width>
+      <x>420</x>
+      <y>100</y>
+      <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="text">
-     <string>Select</string>
+     <string>Browse</string>
     </property>
    </widget>
    <widget class="QPushButton" name="exit">
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>660</x>
       <y>380</y>
       <width>99</width>
       <height>31</height>
@@ -272,7 +272,7 @@
      <rect>
       <x>20</x>
       <y>50</y>
-      <width>641</width>
+      <width>911</width>
       <height>20</height>
      </rect>
     </property>
@@ -283,7 +283,7 @@
    <widget class="QPushButton" name="logButton">
     <property name="geometry">
      <rect>
-      <x>240</x>
+      <x>380</x>
       <y>380</y>
       <width>141</width>
       <height>31</height>
@@ -296,7 +296,7 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>520</x>
       <y>70</y>
       <width>141</width>
       <height>17</height>
@@ -309,7 +309,7 @@
    <widget class="QPushButton" name="batchButton">
     <property name="geometry">
      <rect>
-      <x>90</x>
+      <x>230</x>
       <y>380</y>
       <width>141</width>
       <height>31</height>
@@ -325,7 +325,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>682</width>
+     <width>949</width>
      <height>25</height>
     </rect>
    </property>
