--- a/train.ui
+++ b/train.ui
@@ -6,31 +6,31 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>598</width>
-    <height>400</height>
+    <width>949</width>
+    <height>467</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>598</width>
-    <height>400</height>
+    <width>949</width>
+    <height>467</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>598</width>
-    <height>400</height>
+    <width>949</width>
+    <height>467</height>
    </size>
   </property>
   <property name="windowTitle">
-   <string>SVM Train</string>
+   <string>SVM Training Wizard</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>140</x>
+     <x>290</x>
      <y>20</y>
-     <width>381</width>
+     <width>421</width>
      <height>31</height>
     </rect>
    </property>
@@ -38,20 +38,20 @@
     <font>
      <pointsize>16</pointsize>
      <weight>75</weight>
-     <italic>true</italic>
+     <italic>false</italic>
      <bold>true</bold>
     </font>
    </property>
    <property name="text">
-    <string>Support Vector Machine Training</string>
+    <string>Support Vector Machine Training Wizard</string>
    </property>
   </widget>
   <widget class="QTextBrowser" name="trainTextbox">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>80</y>
-     <width>256</width>
+     <x>30</x>
+     <y>120</y>
+     <width>321</width>
      <height>31</height>
     </rect>
    </property>
@@ -59,9 +59,9 @@
   <widget class="QPushButton" name="trainSelectFile">
    <property name="geometry">
     <rect>
-     <x>430</x>
-     <y>80</y>
-     <width>99</width>
+     <x>360</x>
+     <y>120</y>
+     <width>91</width>
      <height>31</height>
     </rect>
    </property>
@@ -72,8 +72,8 @@
   <widget class="QRadioButton" name="radioButtonSuspicious">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>140</y>
+     <x>130</x>
+     <y>160</y>
      <width>117</width>
      <height>22</height>
     </rect>
@@ -91,8 +91,8 @@
   <widget class="QRadioButton" name="radioButtonNotSuspicious">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>170</y>
+     <x>250</x>
+     <y>160</y>
      <width>141</width>
      <height>22</height>
     </rect>
@@ -107,49 +107,11 @@
     <string>Not Suspicious</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>140</y>
-     <width>151</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>The Selected file is :</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>90</y>
-     <width>91</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>Select File</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="trainExtractButton">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>330</y>
+     <x>310</x>
+     <y>410</y>
      <width>99</width>
      <height>27</height>
     </rect>
@@ -161,8 +123,8 @@
   <widget class="QPushButton" name="trainTrainButton">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>330</y>
+     <x>440</x>
+     <y>410</y>
      <width>99</width>
      <height>27</height>
     </rect>
@@ -174,8 +136,8 @@
   <widget class="QPushButton" name="trainExitButton">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>330</y>
+     <x>570</x>
+     <y>410</y>
      <width>99</width>
      <height>27</height>
     </rect>
@@ -187,24 +149,141 @@
   <widget class="QTextBrowser" name="trainProgressWindow">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>230</y>
-     <width>451</width>
-     <height>81</height>
+     <x>490</x>
+     <y>170</y>
+     <width>431</width>
+     <height>71</height>
     </rect>
    </property>
   </widget>
   <widget class="QProgressBar" name="trainProgressBar">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>200</y>
-     <width>451</width>
+     <x>490</x>
+     <y>110</y>
+     <width>431</width>
      <height>23</height>
     </rect>
    </property>
    <property name="value">
     <number>0</number>
+   </property>
+  </widget>
+  <widget class="Line" name="line">
+   <property name="geometry">
+    <rect>
+     <x>463</x>
+     <y>80</y>
+     <width>20</width>
+     <height>171</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>70</y>
+     <width>931</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>90</y>
+     <width>451</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Please open a file and choose whether it is suspicious or not.</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>90</y>
+     <width>81</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Progress:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>290</y>
+     <width>491</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Click 'Extract' button to create descriptor file from the selected video.</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line_3">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>250</y>
+     <width>931</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>320</y>
+     <width>491</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Click 'Train' button to train the SVM with the created descriptor file.</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>150</y>
+     <width>81</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Status:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>350</y>
+     <width>671</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Training Procedure may take long time to complete. Please be patient.</string>
    </property>
   </widget>
  </widget>
